@@ -1,5 +1,10 @@
 2009-04-18  Ulrich Drepper  <drepper@redhat.com>
 
+	* locale/programs/locarchive.c (open_archive): Map the entire file
+	and not just the administrative data.
+	(add_locale): When we find a hash sum match compare the content
+	to be sure.
+
 	* malloc/malloc.c (malloc_info): Output address space information.
 
 2009-04-17  Ulrich Drepper  <drepper@redhat.com>
